[project]
name = "gepa-spec-gaming-study"
version = "0.1.0"
description = "Preregistered study: specification gaming under evaluator observability in GEPA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gepa>=0.0.27",
    "pydantic-ai>=1.82.0",
    "pydantic-evals>=1.22.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.8.0",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }

[tool.ruff.format]
quote-style = "single"
